# timsbuktoolkit

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  TODO.md  Taskfile.yml  deny.toml  example_speclib_config.toml  pyproject.toml  report.toml  run.bash  rustfmt.toml  serve.bash  showscores.py
bench/: README.md  (+10 more)
python/speclib_builder/: .gitignore  pyproject.toml
python/speclib_builder/speclib_builder/: __main__.py  base.py  builder.py  convert.py  decoys.py  fasta.py  fasta_cli.py  isotopes.py  onxx_predictor.py  writer.py
python/speclib_builder/speclib_builder/ml/: adam.py  linear_regression.py  loess.py  simplertmodel.py
python/speclib_builder/tests/: test_decoys.py  test_entry_matches_rust.py  test_isotopes.py  test_peptide_swap.py
python/timsquery_pyo3/: Cargo.toml  README.md  pyproject.toml
python/timsquery_pyo3/examples/: streaming_example.py
python/timsquery_pyo3/src/: chromatogram.rs  elution_group.rs  index.rs  iterator.rs  lib.rs  numpy_utils.rs  spectrum.rs  tolerance.rs
python/timsseek_rescore/: pyproject.toml
python/timsseek_rescore/timsseek_rescore/: __main__.py  cli.py  datamodels.py  feateng.py  folding.py  plotting.py
python/timsseek_rescore/timsseek_rescore/backends/: mlp.py  mokapot.py  xgb.py
python/timsseek_rts_receiver/: app.py  pyproject.toml
python/timsseek_rts_receiver/timsseek_rts_receiver/: constants.py  io.py  models.py  receiver.py
rust/apex_sim/: Cargo.toml
rust/apex_sim/examples/: bench.rs
rust/apex_sim/src/: app.rs  bench.rs  lib.rs  main.rs  plots.rs  scorer.rs  sim.rs
rust/calibrt/: Cargo.toml
rust/calibrt/examples/: calibrt.rs
rust/calibrt/src/: grid.rs  lib.rs  pathfinding.rs  plotting.rs  types.rs
rust/calibrt/src/snapshots/: calibrt__plotting__tests__heatmap_custom_size.snap  calibrt__plotting__tests__heatmap_default_size.snap  calibrt__plotting__tests__heatmap_no_downscaling.snap  calibrt__plotting__tests__heatmap_subsampling_empty_blocks.snap  calibrt__plotting__tests__plot_quadratic_function.snap  calibrt__plotting__tests__plot_sine_wave.snap  calibrt__plotting__tests__plot_with_errors.snap
rust/calibrt/tests/: tests.rs
rust/speclib_build_cli/: Cargo.toml
rust/speclib_build_cli/src/: cli.rs  config.rs  decoys.rs  dedup.rs  entry.rs  lib.rs  main.rs  mods.rs  pipeline.rs
rust/speclib_build_cli/tests/: integration.rs
rust/tims_stage/: Cargo.toml
rust/tims_stage/src/: backend.rs  common.rs  download.rs  error.rs  lib.rs  load.rs  open.rs  prefix.rs  resolve.rs  tar.rs  upload.rs  uri.rs
rust/tims_stage/tests/: local_tar_staging.rs  minio_smoke.rs  prefix_staging.rs  sweep.rs
rust/timscentroid/: Cargo.toml  README.md
rust/timscentroid/examples/: indexing.rs  iteration_time.rs  load_benchmark.rs  local_instrumented_benchmark.rs  plot.py  probe_mzml.rs  row_group_benchmark.rs  serialization.rs
rust/timscentroid/src/: centroiding.rs  dimension.rs  geometry.rs  indexing.rs  instrumentation.rs  lib.rs  rt_mapping.rs  storage.rs  timings.rs  utils.rs
rust/timscentroid/tests/: lazy_loading_tests.rs  mzdata_ingest.rs  mzml_synthetic.rs  v1_upgrade_test.rs
rust/timsquery/: Cargo.toml  README.md  Taskfile.yml
rust/timsquery/benches/: benchmark_indices.rs
rust/timsquery/data/: slim_benchmark_results_230510_PRTC_13_S1-B1_1_12817.json
rust/timsquery/examples/: probe_speclib.rs
rust/timsquery/src/: errors.rs  lib.rs  main.rs  serde.rs
rust/timsquery/tests/: load_index.rs
rust/timsquery_cli/: Cargo.toml
rust/timsquery_cli/data_contracts/: single_elution_group.json
rust/timsquery_cli/src/: cli.rs  commands.rs  error.rs  main.rs  processing.rs
rust/timsquery_viewer/: Cargo.toml
rust/timsquery_viewer/src/: app.rs  calibration.rs  chromatogram_processor.rs  cli.rs  computed_state.rs  error.rs  file_loader.rs  main.rs  plot_renderer.rs  precursor_table.rs  tolerance_editor.rs
rust/timsseek/: Cargo.toml  DATA_FLOW.md  README.md  Taskfile.yml  sample_fasta_config.json
rust/timsseek/examples/: query_bench.rs  scoring_loops_asm.rs
rust/timsseek/src/: errors.rs  lib.rs  rt_calibration.rs  traits.rs
rust/timsseek/tests/: test_scorer.rs
rust/timsseek_cli/: Cargo.toml
rust/timsseek_cli/assets/: default_config.toml
rust/timsseek_cli/examples/: load_bench.rs
rust/timsseek_cli/src/: cli.rs  config.rs  errors.rs  main.rs  processing.rs  sample_speclib.rs
rust/timsseek_rts/: Cargo.toml
rust/timsseek_rts/src/: cli.rs  index.rs  main.rs
speclib_builder/: pyproject.toml
speclib_builder/speclib_builder/: base.py  builder.py  convert.py  decoys.py  fasta.py  fasta_cli.py  ims.py  onxx_predictor.py  writer.py
speclib_builder/speclib_builder/ml/: adam.py  ims.py  linear_regression.py  ohe_peptide_embed.py  simplertmodel.py
speclib_builder/tests/: test_decoys.py  test_peptide_swap.py
timsquery/: Cargo.toml  Taskfile.yml
timsquery/benches/: benchmark_aggregators.rs  benchmark_centroiding.rs  benchmark_indices.rs  plot_bench.py
timsquery/data/sageresults/: build.py
timsquery/src/: main.rs
timsquery/src/models/: adapters.rs  elution_group.rs  queries.rs
timsquery/src/queriable_tims_data/: queriable_tims_data.rs
timsquery/src/traits/: mod.rs
timsseek/: Cargo.toml  Taskfile.yml  sample_speclib_config.json
timsseek/src/: config.rs  errors.rs  lib.rs  main.rs  models.rs  processing.rs
timsseek/src/data_sources/: speclib.rs
timsseek/src/fragment_mass/: elution_group_converter.rs  fragment_mass_builder.rs  ion_annotation.rs  mod.rs
timsseek/src/models/: arrays.rs  decoy.rs  digest.rs  mod.rs  mz_rt_arrays.rs  query_chunk.rs  sequence_iterator.rs
timsseek/src/protein/: fasta.rs  models.rs
timsseek/src/scoring/: calculate_scores.rs  corr_v_ref.rs  full_results.rs  hyperscore.rs  mod.rs  search_results.rs
timsseek/src/utils/: aligning.rs  correlation.rs  math.rs  mod.rs  rolling_calculators.rs  top_n_array.rs
timsseek_cli/: Cargo.toml
timsseek_cli/src/: cli.rs  config.rs  errors.rs  main.rs  processing.rs
timsseek_rts/: Cargo.toml
timsseek_rts/python/: pyproject.toml  receiver.py
timsseek_rts/src/: cli.rs  index.rs  main.rs
(+233 files in other folders)
