[workspace]
resolver = "2"
members = [
    "rust/calibrt",
    "rust/micromzpaf",
    "rust/timscentroid",
    "rust/timsseek",
    "rust/timsseek_cli",
    "rust/timsseek_rts",
    "rust/timsquery",
    "rust/timsquery_cli",
    "rust/timsquery_viewer"
]

[workspace.package]
version = "0.21.0"
edition = "2024"
authors = ["Sebastian Paez"]
license = "Apache-2.0"

[workspace.dependencies]
half = "2.6"
tracing = { version = "0.1.40", features = ["log"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.141"
tracing-subscriber = { version = "0.3.18", features = [
  "registry",
  "env-filter",
] }
timsrust = { git = "https://github.com/jspaezp/timsrust", branch = "experimental/recalib_iter" }
rusqlite = "0.37.0"
rayon = "1.5"
clap = { version = "4.5.27", features = ["derive"] }
indicatif = { version = "0.18.0", features = ["rayon"] }

# Parquet and arrow usually need to be kept in sync
# Its not needed but makes binaries smaller
parquet = { version = "57.1" }
arrow = { version = "57.1" }

mimalloc = { version = "0.1.46", features = ["secure"] }
thiserror = "2"
insta = { version = "1.34.0" }
bon = "3.8.1"
tinyvec = { features = ["alloc", "serde"], version = "1.10.0" }
rustyms = "0.11.0"
csv = "1.3"

tempfile = "3.23.0"

[profile.release]
lto = 'thin'
codegen-units = 1
panic = 'abort'
opt-level = 3
# Needed for flamegraph
# debug = true
