[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "timsseek-workspace"
version = "0.10.3-b6"
requires-python = ">=3.11,<3.13"
dependencies = [
    "speclib_builder[ml]",
]

[dependency-groups]
dev = [
  "pre-commit>=4.0.1",
  "ruff>=0.9.0",
  "pytest",
  "uv",
  "bumpver",
]
interactive = [
  "pandas",
  "polars",
  "matplotlib",
  "ipykernel",
]

[tool.uv.sources]
speclib_builder = { workspace = true }

[tool.uv.workspace]
members = ["speclib_builder"]

[tool.ruff]
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true
preview = true

[tool.ruff.lint]
select = ["E", "F", "T20", "I"]

[tool.hatch.build.targets.wheel]
packages = ["speclib_builder"]

[tool.bumpver]
current_version = "0.10.3-b6"
version_pattern = "MAJOR.MINOR.PATCH[-PYTAGNUM]"
tag_message = "v{new_version}"
commit_message = "chore: bump version to {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"*/pyproject.toml" = ['version = "{version}"$']
"pyproject.toml" = ['version = "{version}"$']
"Cargo.toml" = ['version = "{version}"$']
"*/Cargo.toml" = ['version = "{version}"$']
