[project]
name = "timsseek-workspace"
version = "0.13.0-b0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "speclib_builder[ml]",
    "timsseek_rescore",
    "timsseek_rts_receiver",
]

[dependency-groups]
dev = [
  "pre-commit>=4.0.1",
  "ruff>=0.9.0",
  "pytest",
  "uv",
  "bumpver",
]
interactive = [
  "pandas",
  "polars",
  "matplotlib",
  "ipykernel",
  "vizta",
]

[tool.uv.sources]
speclib_builder = { workspace = true }
timsseek_rescore = { workspace = true }
timsseek_rts_receiver = { workspace = true }

[tool.uv.workspace]
members = [
  "python/speclib_builder",
  "python/timsseek_rescore",
  "python/timsseek_rts_receiver",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true
preview = true

[tool.ruff.lint]
select = ["E", "F", "T20", "I"]

[tool.hatch.build.targets.wheel]
packages = [
  "python/speclib_builder",
  "python/timsseek_rescore",
]

[tool.bumpver]
current_version = "0.13.0-b0"
version_pattern = "MAJOR.MINOR.PATCH[-PYTAGNUM]"
tag_message = "v{new_version}"
commit_message = "chore: bump version to {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"python/*/pyproject.toml" = ['version = "{version}"$']
"pyproject.toml" = ['version = "{version}"$']
"Cargo.toml" = ['version = "{version}"$']
"rust/*/Cargo.toml" = ['version = "{version}"$']
