[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speclib_builder"
version = "0.10.3-b1"
requires-python = ">=3.11,<3.13"
dependencies = [
  "rich",
  "tqdm",
  "pyteomics",
  "numpy >= 2, < 3",
  "rustyms",
  "polars",
  "uniplot",
]

[project.scripts]
speclib_build_fasta = "speclib_builder.fasta_cli:main"
speclib_convert = "speclib_builder.convert:main"

[project.optional-dependencies]
ml = [
  "elfragmentadonnx",
  "elfragmentador_core",
  "cloudpathlib[s3]",
  "boto3",
]

[tool.uv.sources]
# TODO: publish this package ... maybe ...
elfragmentadonnx = { path = "/Users/sebastianpaez/git/2024_dev_talus_prospect/python_packages/dist/elfragmentadonnx-0.22.0-py3-none-any.whl" }
elfragmentador_core = { path = "/Users/sebastianpaez/git/2024_dev_talus_prospect/python_packages/dist/elfragmentador_core-0.22.0-py3-none-any.whl" }
