[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speclib_builder"
version = "0.10.3-b6"
requires-python = ">=3.11,<3.13"
dependencies = [
  "rich",
  "tqdm",
  "pyteomics",
  "numpy >= 2, < 3",
  "rustyms",
  "polars",
  "uniplot",
]

[project.scripts]
speclib_build_fasta = "speclib_builder.fasta_cli:main"
speclib_convert = "speclib_builder.convert:main"

[project.optional-dependencies]
ml = [
  "elfragmentadonnx",
  "elfragmentador_core",
  "cloudpathlib[s3]",
  "boto3",
]

[tool.uv.sources]
# TODO: publish this package ... maybe ...
elfragmentadonnx = { url = "https://github.com/TalusBio/2024_dev_talus_prospect/releases/download/v0.22.3/elfragmentadonnx-0.22.3-py3-none-any.whl" }
elfragmentador_core = { url = "https://github.com/TalusBio/2024_dev_talus_prospect/releases/download/v0.22.3/elfragmentador_core-0.22.3-py3-none-any.whl" }
