[package]
name = "timsseek"
version = "0.10.1"
edition = "2021"
license = "Apache-2.0"

[dependencies]
rustyms = "0.8.3"
timsquery = { path = "../timsquery" }
regex = "1.10.6"
csv = "1.3.0"
rusqlite = "0.33.0"
indicatif = "0.17.9"

# Workspace-inherited deps
timsrust = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }


[lib]
