[package]
name = "timsseek"
version = "0.10.3-b1"
edition = "2021"
license = "Apache-2.0"

[dependencies]
rustyms = "0.8.3"
timsquery = { path = "../timsquery" }
regex = "1.10.6"
csv = "1.3.0"
rusqlite = "0.32.0" # Timsrust constrains this dep
indicatif = "0.17.9"
parquet_derive = "54.0.0"
parquet = "54.0.0"

# Workspace-inherited deps
timsrust = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }


[lib]
