[package]
name = "timsseek"
version = "0.10.3-b6"
edition = "2021"
license = "Apache-2.0"

[dependencies]
rustyms = "0.8.3"
timsquery = { path = "../timsquery" }
regex = "1.10.6"
csv = "1.3.0"
rusqlite = "0.32.0" # Timsrust constrains this dep
parquet_derive = "54.2.0"
parquet = "54.3.0"

# Workspace-inherited deps
timsrust = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
indicatif = { workspace = true }


[lib]
