[package]
name = "timsseek_cli"
version = "0.2.0"
edition = "2021"

[dependencies]
timsseek = { path = "../timsseek" }
timsquery = { path = "../timsquery" }
clap = { version = "4.5.17", features = ["derive"] }
rayon = "1.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"

regex = "1.10.6"
csv = "1.3.0"
timsrust = "0.4.1"
indicatif = "0.17.9"

# Workspace-inherited deps
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "timsseek"
path = "src/main.rs"