[package]
name = "timsseek_cli"
version = "0.10.3-b6"
edition = "2021"

[dependencies]
timsseek = { path = "../timsseek" }
timsquery = { path = "../timsquery" }

regex = "1.10.6"
csv = "1.3.0"
timsrust = "0.4.1"
indicatif = "0.17.9"
# mimalloc = "0.1.43"

# Workspace-inherited deps
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }

[[bin]]
name = "timsseek"
path = "src/main.rs"
