[package]
name = "timsseek_rts"
version = "0.10.1"
edition = "2021"

[dependencies]
timsseek = { path = "../timsseek" }
timsquery = { path = "../timsquery" }
clap = { version = "4.5.17", features = ["derive"] }
rayon = "1.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = [
  "registry",
  "env-filter",
] }
tracing-bunyan-formatter = "0.3.10"

regex = "1.10.6"
csv = "1.3.0"
timsrust = "0.4.1"
indicatif = "0.17.9"

[[bin]]
name = "timsseek_rts"
path = "src/main.rs"
