[package]
name = "timsseek_rts"
version = "0.10.3-b6"
edition = "2021"

[dependencies]
timsseek = { path = "../timsseek" }
timsquery = { path = "../timsquery" }
tracing-bunyan-formatter = "0.3.10"

regex = "1.10.6"
csv = "1.3.0"
timsrust = "0.4.1"

# Workspace-inherited deps
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  "registry",
  "env-filter",
] }
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }
clap = { workspace = true, features = ["derive"] }
indicatif = { workspace = true }

[[bin]]
name = "timsseek_rts"
path = "src/main.rs"
