[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speclib_builder"
version = "0.21.0"
requires-python = ">=3.11,<3.13"
dependencies = [
  "rich",
  "tqdm",
  "pyteomics",
  "numpy >= 2, < 3",
  "rustyms",
  "polars",
  "loguru",
  "uniplot",
  "pydantic >= 2.11.4, < 3",
  "zstandard",
  "msgpack",
]

[project.scripts]
speclib_build_fasta = "speclib_builder.fasta_cli:main"
speclib_convert = "speclib_builder.convert:main"

[project.optional-dependencies]
ml = [
  "elfragmentadonnx",
  "elfragmentador_core",
  "cloudpathlib[s3]",
  "boto3",
]

[tool.hatch.build.targets.wheel]
only-packages = true

[tool.uv.sources]
# TODO: publish this package ... maybe ...
elfragmentadonnx = { url = "https://github.com/TalusBio/2024_dev_talus_prospect/releases/download/v0.23.0/elfragmentadonnx-0.23.0-py3-none-any.whl" }
elfragmentador_core = { url = "https://github.com/TalusBio/2024_dev_talus_prospect/releases/download/v0.23.0/elfragmentador_core-0.23.0-py3-none-any.whl" }
