[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "timsquery_pyo3"
version = "0.31.0"
requires-python = ">=3.11,<3.14"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]

[tool.maturin]
features = ["extension-module"]
manifest-path = "Cargo.toml"
