[project]
name = "timsseek_rts_receiver"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
description = "Add your description here"
dependencies = [
    "streamlit",
    "pandas",
    "numpy",
    "matplotlib",
    "requests",
    "speclib_builder[ml]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
speclib_builder = { workspace = true }
