[project]
name = "timsseek_rts_receiver"
version = "0.18.1"
requires-python = ">=3.11,<3.13"
description = "Add your description here"
dependencies = [
    "streamlit",
    "pandas",
    "numpy",
    "matplotlib",
    "requests",
    "speclib_builder[ml]",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
speclib_builder = { workspace = true }
