[package]
name = "calibrt"
version.workspace = true
edition = "2021"
license = "Apache-2.0"

[dependencies]
rand = "0.8.5" # Used for generating sample data in the example
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }

[lib]


