[package]
name = "calibrt"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rand = "0.8.5" # Used for generating sample data in the example
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tracing-subscriber = { workspace = true }

[lib]


