[package]
name = "speclib_build_cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "speclib_build_cli"
path = "src/lib.rs"

[[bin]]
name = "speclib_build"
path = "src/main.rs"

[dependencies]
timsseek = { path = "../timsseek" }
micromzpaf = { path = "../micromzpaf" }
rustyms = { workspace = true }

clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = { workspace = true }

reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
bloomfilter = "1"

[dev-dependencies]
tempfile = { workspace = true }
