[package]
name = "speclib_build_cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "speclib_build_cli"
path = "src/lib.rs"

[[bin]]
name = "speclib_build"
path = "src/main.rs"

[dependencies]
timsseek = { path = "../timsseek" }
micromzpaf = { path = "../micromzpaf" }
tims_stage = { path = "../tims_stage" }
rustyms = { workspace = true }

clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = { workspace = true }
tempfile = { workspace = true }

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
bloomfilter = "1"

[features]
default = ["aws"]
aws = ["tims_stage/aws"]
gcp = ["tims_stage/gcp"]
azure = ["tims_stage/azure"]
