[package]
name = "tims_stage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
timscentroid = { path = "../timscentroid" }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }
indicatif = { workspace = true }
bytes = "1"
url = "2"

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
aws = ["timscentroid/aws"]
gcp = ["timscentroid/gcp"]
azure = ["timscentroid/azure"]

[lints]
workspace = true
