[package]
name = "timscentroid"
version = "0.2.0"
edition = "2024"

[dependencies]
geo = {version="0.31", features = ["serde"]}
geo-types = { version = "0.7", features = ["serde"] }

# Workspace
timsrust = { workspace = true }
half = { workspace = true, features = ["serde"]}
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Example dependencies
tracing-subscriber = { workspace = true, features = ["env-filter"], default-features = true}

# Not using it RN but looks like a super solid way to make
# builder patterns
# bon = "3.7.2"
