[package]
name = "timscentroid"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
geo = {version="0.31", features = ["serde"]}
geo-types = { version = "0.7", features = ["serde"] }

# Workspace
timsrust = { workspace = true }
half = { workspace = true, features = ["serde"]}
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parquet = { workspace = true }
arrow = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }


# Example dependencies
tracing-subscriber = { workspace = true, features = ["env-filter"], default-features = true}
rand = "0.8"

# Not using it RN but looks like a super solid way to make
# builder patterns
# bon = "3.7.2"
