[package]
name = "timsquery"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bincode = "1.3"
zstd = "0.13"



# Workspace member deps
timscentroid = { path = "../timscentroid" }
micromzpaf = { path = "../micromzpaf" }

# Workspace-inherited deps
timsrust = { workspace = true }
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
tinyvec = { workspace = true, features = ["alloc", "serde"] }
tracing = { workspace = true }
rayon = { workspace = true }
half = { workspace = true }
bon = { workspace = true }
csv = { workspace = true }


[lib]

[target.'cfg(windows)'.dependencies]
mimalloc = { workspace = true, features = ["secure"] }
