[package]
name = "timsquery"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]

# Workspace member deps
array2d = { path = "../array2d" }
timscentroid = { path = "../timscentroid" }
micromzpaf = { path = "../micromzpaf" }
tims_stage = { path = "../tims_stage" }

# Workspace-inherited deps
timsrust = { workspace = true }
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
tinyvec = { workspace = true, features = ["alloc", "serde"] }
tracing = { workspace = true }
rayon = { workspace = true }
half = { workspace = true }
bon = { workspace = true }
csv = { workspace = true }
parquet = { workspace = true }
arrow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }


[lib]

[target.'cfg(windows)'.dependencies]
mimalloc = { workspace = true, features = ["secure"] }

[lints]
workspace = true
