[package]
name = "timsquery"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]

# Workspace member deps
array2d = { path = "../array2d" }
timscentroid = { path = "../timscentroid" }
micromzpaf = { path = "../micromzpaf" }
tims_stage = { path = "../tims_stage" }

# Workspace-inherited deps
timsrust = { workspace = true }
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
tinyvec = { workspace = true, features = ["alloc", "serde"] }
tracing = { workspace = true }
rayon = { workspace = true }
memmap2 = { workspace = true }
half = { workspace = true }
bon = { workspace = true }
csv = { workspace = true }
parquet = { workspace = true }
arrow = { workspace = true }
thiserror = { workspace = true }

[features]
# Forward mzML/mzdata ingest support down to timscentroid, where the reader lives.
# Not defaulted here (see timsseek_cli) so `--no-default-features` stays lean.
mzdata = ["timscentroid/mzdata"]

[dev-dependencies]
tempfile = { workspace = true }


[lib]

[target.'cfg(windows)'.dependencies]
mimalloc = { workspace = true, features = ["secure"] }

[lints]
workspace = true
