[package]
name = "timsquery_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
timsquery = { path = "../timsquery" }
timscentroid = { path = "../timscentroid" }

# Workspace-inherited deps from the original main.rs
clap = { workspace = true, features = ["derive"] }
timsrust = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rayon = { workspace = true }
half = { workspace = true }
thiserror = { workspace = true } # User requested

[target.'cfg(windows)'.dependencies]
mimalloc = { workspace = true, features = ["secure"] }
