[package]
name = "timsquery_viewer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "timsquery_viewer"
path = "src/main.rs"

[dependencies]
timsquery = { path = "../timsquery" }
timscentroid = { path = "../timscentroid" }

# GUI dependencies
egui = "0.33"
eframe = { version = "0.33", default-features = true, features = ["default_fonts"] }
egui_plot = "0.34"
egui_extras = { version = "0.33", features = ["serde"] }
egui_dock = "0.18"
rfd = "0.15"

# Workspace-inherited deps
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
timsrust = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(windows)'.dependencies]
mimalloc = { workspace = true, features = ["secure"] }
