[package]
name = "timsseek"
version.workspace = true
edition = "2021"
license = "Apache-2.0"

[dependencies]
rustyms = "0.8.3"
regex = "1.10.6"
csv = "1.3.0"
parquet_derive = "56.1"
rmp-serde = "1.1"
arrayvec = "0.7.6"
zstd = "0.13"

# Gradient boosted tree
forust-ml = "0.4.8"
rand = "0.9.2"

# Workspace member deps
timsquery = { path = "../timsquery" }
calibrt = { path = "../calibrt" }

# Workspace-inherited deps
timsrust = { workspace = true }
rusqlite = {workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
indicatif = { workspace = true }
parquet = { workspace = true }
# This is a test only dependency ...
tracing-subscriber = { workspace = true }

[features]
# This enables adding instrumentation to a lot of the scoring
# internals, meant only for profiling use cases and generate
# VERY verbose output.
instrumentation = []
serial_scoring = []

[lib]
