[package]
name = "timsseek"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
regex = "1.10.6"
rmp-serde = "1.1"
zstd = "0.13"

# Gradient boosted tree
forust-ml = "0.4.8"
rand = "0.9.2"

# Workspace member deps
timsquery = { path = "../timsquery" }
calibrt = { path = "../calibrt" }
micromzpaf = { path = "../micromzpaf" }
timscentroid = { path = "../timscentroid" }

# Workspace-inherited deps
rustyms = { workspace = true }
timsrust = { workspace = true }
rusqlite = {workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
parquet_derive = {  workspace = true }
parquet = { workspace = true }

[features]
# This enables adding instrumentation to a lot of the scoring
# internals, meant only for profiling use cases and generate
# VERY verbose output.
instrumentation = []
serial_scoring = []

[lib]
