[package]
name = "timsseek"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
regex = "1.10.6"
rmp-serde = "1.1"
zstd = "0.13"

# Gradient boosted tree
forust-ml = "0.5.0"
rand = "0.9.2"

# Workspace member deps
timsquery = { path = "../timsquery" }
calibrt = { path = "../calibrt" }
micromzpaf = { path = "../micromzpaf" }
timscentroid = { path = "../timscentroid" }
array2d = { path = "../array2d" }

# Workspace-inherited deps
rustyms = { workspace = true }
timsrust = { workspace = true }
rusqlite = {workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true, optional = true }
parquet = { workspace = true }
arrow = { workspace = true }

[features]
default = ["rayon"]
instrumentation = []

[lib]
